Assembler/Output/asm_parser.output
Terminals unused in grammar

    TOKEN_ERROR


Grammar

    0 $accept: prog $end

    1 prog: prog TOKEN_ENDFILE
    2     | prog stmt
    3     | stmt

    4 stmt: add_stmt
    5     | sub_stmt
    6     | or_stmt
    7     | and_stmt
    8     | not_stmt
    9     | xor_stmt
   10     | cmp_stmt
   11     | rr_stmt
   12     | rl_stmt
   13     | branch_stmt
   14     | move_stmt
   15     | jump_stmt
   16     | load_stmt
   17     | store_stmt
   18     | reti_stmt
   19     | halt_stmt
   20     | nop_stmt
   21     | byte_stmt
   22     | word_stmt
   23     | alloc_stmt
   24     | org_stmt
   25     | equ_stmt
   26     | label

   27 add_stmt: TOKEN_ADD TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   29 sub_stmt: TOKEN_SUB TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   31 or_stmt: TOKEN_OR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   33 and_stmt: TOKEN_AND TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   35 xor_stmt: TOKEN_XOR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   36         | TOKEN_XOR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   37 not_stmt: TOKEN_NOT TOKEN_REG TOKEN_COMMA TOKEN_REG
   38         | TOKEN_NOT TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   39 cmp_stmt: TOKEN_CMP TOKEN_REG TOKEN_COMMA TOKEN_REG
   40         | TOKEN_CMP TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   41 rr_stmt: TOKEN_RR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   42        | TOKEN_RR TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   43 rl_stmt: TOKEN_RL TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   44        | TOKEN_RL TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   45 branch_stmt: TOKEN_BRANCH TOKEN_IDENTIFIER
   46            | TOKEN_BRANCH TOKEN_CARDINAL expression
   47            | TOKEN_BRANCH TOKEN_DOLLAR

   48 move_stmt: TOKEN_MOVE TOKEN_REG TOKEN_COMMA TOKEN_REG

   49 jump_stmt: TOKEN_JUMP TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression
   50          | TOKEN_JUMP_LINK TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   51 load_stmt: TOKEN_LOAD_DIRECT TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression
   52          | TOKEN_LOAD_IMMEDIATE TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression
   53          | TOKEN_LOAD_INDEXED TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   54 store_stmt: TOKEN_STORE_DIRECT TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression
   55           | TOKEN_STORE_INDEXED TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

   56 reti_stmt: TOKEN_RETI

   57 halt_stmt: TOKEN_HALT

   58 nop_stmt: TOKEN_NOP

   59 byte_stmt: TOKEN_BYTE TOKEN_NUMBER

   60 word_stmt: TOKEN_WORD TOKEN_NUMBER

   61 alloc_stmt: TOKEN_ALLOC TOKEN_IDENTIFIER TOKEN_NUMBER

   62 org_stmt: TOKEN_ORG TOKEN_NUMBER

   63 equ_stmt: TOKEN_EQU TOKEN_IDENTIFIER TOKEN_COMMA expression

   64 label: TOKEN_IDENTIFIER TOKEN_COLON

   65 expression: TOKEN_LEFT_PAREN expression TOKEN_RIGHT_PAREN
   66           | expression TOKEN_PLUS expression
   67           | expression TOKEN_MINUS expression
   68           | TOKEN_PLUS TOKEN_NUMBER
   69           | TOKEN_MINUS TOKEN_NUMBER
   70           | TOKEN_NUMBER
   71           | TOKEN_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ADD (258) 27 28
    TOKEN_SUB (259) 29 30
    TOKEN_OR (260) 31 32
    TOKEN_AND (261) 33 34
    TOKEN_NOT (262) 37 38
    TOKEN_XOR (263) 35 36
    TOKEN_CMP (264) 39 40
    TOKEN_RR (265) 41 42
    TOKEN_RL (266) 43 44
    TOKEN_BRANCH (267) 45 46 47
    TOKEN_JUMP (268) 49
    TOKEN_JUMP_LINK (269) 50
    TOKEN_MOVE (270) 48
    TOKEN_LOAD_DIRECT (271) 51
    TOKEN_LOAD_IMMEDIATE (272) 52
    TOKEN_LOAD_INDEXED (273) 53
    TOKEN_STORE_DIRECT (274) 54
    TOKEN_STORE_INDEXED (275) 55
    TOKEN_RETI (276) 56
    TOKEN_HALT (277) 57
    TOKEN_NOP (278) 58
    TOKEN_NUMBER (279) 59 60 61 62 68 69 70
    TOKEN_REG (280) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 48 49 50 51 52 53 54 55
    TOKEN_IDENTIFIER (281) 45 61 63 64 71
    TOKEN_ENDFILE (282) 1
    TOKEN_ERROR (283)
    TOKEN_COMMA (284) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 48 49 50 51 52 53 54 55 63
    TOKEN_CARDINAL (285) 28 30 32 34 36 38 40 42 44 46 49 50 51 52 53 54 55
    TOKEN_COLON (286) 64
    TOKEN_DOLLAR (287) 47
    TOKEN_BYTE (288) 59
    TOKEN_WORD (289) 60
    TOKEN_ALLOC (290) 61
    TOKEN_ORG (291) 62
    TOKEN_EQU (292) 63
    TOKEN_PLUS (293) 66 68
    TOKEN_MINUS (294) 67 69
    TOKEN_LEFT_PAREN (295) 65
    TOKEN_RIGHT_PAREN (296) 65


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    prog (43)
        on left: 1 2 3
        on right: 0 1 2
    stmt (44)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 2 3
    add_stmt (45)
        on left: 27 28
        on right: 4
    sub_stmt (46)
        on left: 29 30
        on right: 5
    or_stmt (47)
        on left: 31 32
        on right: 6
    and_stmt (48)
        on left: 33 34
        on right: 7
    xor_stmt (49)
        on left: 35 36
        on right: 9
    not_stmt (50)
        on left: 37 38
        on right: 8
    cmp_stmt (51)
        on left: 39 40
        on right: 10
    rr_stmt (52)
        on left: 41 42
        on right: 11
    rl_stmt (53)
        on left: 43 44
        on right: 12
    branch_stmt (54)
        on left: 45 46 47
        on right: 13
    move_stmt (55)
        on left: 48
        on right: 14
    jump_stmt (56)
        on left: 49 50
        on right: 15
    load_stmt (57)
        on left: 51 52 53
        on right: 16
    store_stmt (58)
        on left: 54 55
        on right: 17
    reti_stmt (59)
        on left: 56
        on right: 18
    halt_stmt (60)
        on left: 57
        on right: 19
    nop_stmt (61)
        on left: 58
        on right: 20
    byte_stmt (62)
        on left: 59
        on right: 21
    word_stmt (63)
        on left: 60
        on right: 22
    alloc_stmt (64)
        on left: 61
        on right: 23
    org_stmt (65)
        on left: 62
        on right: 24
    equ_stmt (66)
        on left: 63
        on right: 25
    label (67)
        on left: 64
        on right: 26
    expression (68)
        on left: 65 66 67 68 69 70 71
        on right: 28 30 32 34 36 38 40 42 44 46 49 50 51 52 53 54 55 63 65 66 67


State 0

    0 $accept: • prog $end

    TOKEN_ADD             shift, and go to state 1
    TOKEN_SUB             shift, and go to state 2
    TOKEN_OR              shift, and go to state 3
    TOKEN_AND             shift, and go to state 4
    TOKEN_NOT             shift, and go to state 5
    TOKEN_XOR             shift, and go to state 6
    TOKEN_CMP             shift, and go to state 7
    TOKEN_RR              shift, and go to state 8
    TOKEN_RL              shift, and go to state 9
    TOKEN_BRANCH          shift, and go to state 10
    TOKEN_JUMP            shift, and go to state 11
    TOKEN_JUMP_LINK       shift, and go to state 12
    TOKEN_MOVE            shift, and go to state 13
    TOKEN_LOAD_DIRECT     shift, and go to state 14
    TOKEN_LOAD_IMMEDIATE  shift, and go to state 15
    TOKEN_LOAD_INDEXED    shift, and go to state 16
    TOKEN_STORE_DIRECT    shift, and go to state 17
    TOKEN_STORE_INDEXED   shift, and go to state 18
    TOKEN_RETI            shift, and go to state 19
    TOKEN_HALT            shift, and go to state 20
    TOKEN_NOP             shift, and go to state 21
    TOKEN_IDENTIFIER      shift, and go to state 22
    TOKEN_BYTE            shift, and go to state 23
    TOKEN_WORD            shift, and go to state 24
    TOKEN_ALLOC           shift, and go to state 25
    TOKEN_ORG             shift, and go to state 26
    TOKEN_EQU             shift, and go to state 27

    prog         go to state 28
    stmt         go to state 29
    add_stmt     go to state 30
    sub_stmt     go to state 31
    or_stmt      go to state 32
    and_stmt     go to state 33
    xor_stmt     go to state 34
    not_stmt     go to state 35
    cmp_stmt     go to state 36
    rr_stmt      go to state 37
    rl_stmt      go to state 38
    branch_stmt  go to state 39
    move_stmt    go to state 40
    jump_stmt    go to state 41
    load_stmt    go to state 42
    store_stmt   go to state 43
    reti_stmt    go to state 44
    halt_stmt    go to state 45
    nop_stmt     go to state 46
    byte_stmt    go to state 47
    word_stmt    go to state 48
    alloc_stmt   go to state 49
    org_stmt     go to state 50
    equ_stmt     go to state 51
    label        go to state 52


State 1

   27 add_stmt: TOKEN_ADD • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   28         | TOKEN_ADD • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 53


State 2

   29 sub_stmt: TOKEN_SUB • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   30         | TOKEN_SUB • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 54


State 3

   31 or_stmt: TOKEN_OR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   32        | TOKEN_OR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 55


State 4

   33 and_stmt: TOKEN_AND • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   34         | TOKEN_AND • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 56


State 5

   37 not_stmt: TOKEN_NOT • TOKEN_REG TOKEN_COMMA TOKEN_REG
   38         | TOKEN_NOT • TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 57


State 6

   35 xor_stmt: TOKEN_XOR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   36         | TOKEN_XOR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 58


State 7

   39 cmp_stmt: TOKEN_CMP • TOKEN_REG TOKEN_COMMA TOKEN_REG
   40         | TOKEN_CMP • TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 59


State 8

   41 rr_stmt: TOKEN_RR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   42        | TOKEN_RR • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 60


State 9

   43 rl_stmt: TOKEN_RL • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_REG
   44        | TOKEN_RL • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 61


State 10

   45 branch_stmt: TOKEN_BRANCH • TOKEN_IDENTIFIER
   46            | TOKEN_BRANCH • TOKEN_CARDINAL expression
   47            | TOKEN_BRANCH • TOKEN_DOLLAR

    TOKEN_IDENTIFIER  shift, and go to state 62
    TOKEN_CARDINAL    shift, and go to state 63
    TOKEN_DOLLAR      shift, and go to state 64


State 11

   49 jump_stmt: TOKEN_JUMP • TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 65


State 12

   50 jump_stmt: TOKEN_JUMP_LINK • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 66


State 13

   48 move_stmt: TOKEN_MOVE • TOKEN_REG TOKEN_COMMA TOKEN_REG

    TOKEN_REG  shift, and go to state 67


State 14

   51 load_stmt: TOKEN_LOAD_DIRECT • TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 68


State 15

   52 load_stmt: TOKEN_LOAD_IMMEDIATE • TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 69


State 16

   53 load_stmt: TOKEN_LOAD_INDEXED • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 70


State 17

   54 store_stmt: TOKEN_STORE_DIRECT • TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 71


State 18

   55 store_stmt: TOKEN_STORE_INDEXED • TOKEN_REG TOKEN_COMMA TOKEN_REG TOKEN_COMMA TOKEN_CARDINAL expression

    TOKEN_REG  shift, and go to state 72


State 19

   56 reti_stmt: TOKEN_RETI •

    $default  reduce using rule 56 (reti_stmt)


State 20

   57 halt_stmt: TOKEN_HALT •

    $default  reduce using rule 57 (halt_stmt)


State 21

   58 nop_stmt: TOKEN_NOP •

    $default  reduce using rule 58 (nop_stmt)


State 22

   64 label: TOKEN_IDENTIFIER • TOKEN_COLON

    TOKEN_COLON  shift, and go to state 73


State 23

   59 byte_stmt: TOKEN_BYTE • TOKEN_NUMBER

    TOKEN_NUMBER  shift, and go to state 74


State 24

   60 word_stmt: TOKEN_WORD • TOKEN_NUMBER

    TOKEN_NUMBER  shift, and go to state 75


State 25

   61 alloc_stmt: TOKEN_ALLOC • TOKEN_IDENTIFIER TOKEN_NUMBER

    TOKEN_IDENTIFIER  shift, and go to state 76


State 26

   62 org_stmt: TOKEN_ORG • TOKEN_NUMBER

    TOKEN_NUMBER  shift, and go to state 77


State 27

   63 equ_stmt: TOKEN_EQU • TOKEN_IDENTIFIER TOKEN_COMMA expression

    TOKEN_IDENTIFIER  shift, and go to state 78


State 28

    0 $accept: prog • $end
    1 prog: prog • TOKEN_ENDFILE
    2     | prog • stmt

    $end                  shift, and go to state 79
    TOKEN_ADD             shift, and go to state 1
    TOKEN_SUB             shift, and go to state 2
    TOKEN_OR              shift, and go to state 3
    TOKEN_AND             shift, and go to state 4
    TOKEN_NOT             shift, and go to state 5
    TOKEN_XOR             shift, and go to state 6
    TOKEN_CMP             shift, and go to state 7
    TOKEN_RR              shift, and go to state 8
    TOKEN_RL              shift, and go to state 9
    TOKEN_BRANCH          shift, and go to state 10
    TOKEN_JUMP            shift, and go to state 11
    TOKEN_JUMP_LINK       shift, and go to state 12
    TOKEN_MOVE            shift, and go to state 13
    TOKEN_LOAD_DIRECT     shift, and go to state 14
    TOKEN_LOAD_IMMEDIATE  shift, and go to state 15
    TOKEN_LOAD_INDEXED    shift, and go to state 16
    TOKEN_STORE_DIRECT    shift, and go to state 17
    TOKEN_STORE_INDEXED   shift, and go to state 18
    TOKEN_RETI            shift, and go to state 19
    TOKEN_HALT            shift, and go to state 20
    TOKEN_NOP             shift, and go to state 21
    TOKEN_IDENTIFIER      shift, and go to state 22
    TOKEN_ENDFILE         shift, and go to state 80
    TOKEN_BYTE            shift, and go to state 23
    TOKEN_WORD            shift, and go to state 24
    TOKEN_ALLOC           shift, and go to state 25
    TOKEN_ORG             shift, and go to state 26
    TOKEN_EQU             shift, and go to state 27
